# coro-cloudstorage

./: .gitmodules  CMakeLists.txt  README.md  bootstrap.sh  vcpkg-configuration.json  vcpkg.json
assets/config/: auth_data.json
assets/html/: account_entry.html  amazons3_login.html  dash_player.html  error_page.html  home_page.html  item_entry.html  local_login.html  mega_login.html  open_stack_login.html  provider_entry.html  settings_page.html  webdav_login.html
assets/js/: account_list_main.js  dash_main.js  settings_main.js
assets/styles/: colors_dark.css  colors_light.css  default.css  layout.css
cmake/: antlr.cmake  coro-cloudstorage-config.cmake.in  embed_resource.cmake  embed_resource_header.cmake  embed_resource_impl.cmake
contrib/: CMakeLists.txt
contrib/boost/: di.hpp
contrib/ffmpeg-config/: CMakeLists.txt  config.h.in
contrib/ffmpeg-config/libavcodec/: bsf_list.c  codec_list.c  parser_list.c
contrib/ffmpeg-config/libavfilter/: filter_list.c
contrib/ffmpeg-config/libavformat/: demuxer_list.c  muxer_list.c
contrib/ffmpeg-config/libavutil/: avconfig.h.in
contrib/patches/: mega-fix-build.patch  zlib-fix-build.patch
examples/: CMakeLists.txt  cloudstorage.cc  js.cc
src/: CMakeLists.txt
src/coro/cloudstorage/: abstract_cloud_provider.h  cloud_exception.h  cloud_factory.cc  cloud_factory.h  cloud_provider.h  version.cc  version.h
src/coro/cloudstorage/providers/: amazon_s3.cc  amazon_s3.h  box.cc  box.h  dropbox.cc  dropbox.h  google_drive.cc  google_drive.h  hubic.cc  hubic.h  local_filesystem.cc  local_filesystem.h  mega.cc  mega.h  mega_v2.cc  mega_v2.h  one_drive.cc  one_drive.h  open_stack.cc  open_stack.h  pcloud.cc  pcloud.h  webdav.cc  webdav.h  yandex_disk.cc  yandex_disk.h  youtube.cc  youtube.h
src/coro/cloudstorage/providers/mega/: file_system_access.h  http_io.h
src/coro/cloudstorage/util/: abstract_cloud_factory.h  abstract_cloud_provider.h  abstract_cloud_provider_impl.h  account_manager_handler.cc  account_manager_handler.h  auth_data.h  auth_handler.h  auth_manager.h  auth_token_manager.cc  auth_token_manager.h  avio_context.cc  avio_context.h  cache_manager.cc  cache_manager.h  clock.cc  clock.h  cloud_factory_config.cc  cloud_factory_config.h  cloud_factory_context.cc  cloud_factory_context.h  cloud_provider_account.cc  cloud_provider_account.h  cloud_provider_handler.cc  cloud_provider_handler.h  cloud_provider_utils.cc  cloud_provider_utils.h  crypto_utils.cc  crypto_utils.h  dash_handler.cc  dash_handler.h  evaluate_javascript.cc  evaluate_javascript.h  exception_utils.cc  exception_utils.h  fetch_json.h  ffmpeg_utils.cc  ffmpeg_utils.h  file_utils.cc  file_utils.h  generate_thumbnail.cc  (+56 more)
src/coro/cloudstorage/util/antlr/: javascript_lexer.g4  javascript_lexer_base.cc  javascript_lexer_base.h  javascript_parser.g4
test/: CMakeLists.txt  account_manager_test.cc  fake_cloud_factory_context.cc  fake_cloud_factory_context.h  fake_http_client.cc  fake_http_client.h  functional_test.cc  google_drive_test.cc  mega_test.cc  muxer_test.cc  test_utils.cc  test_utils.h  thumbnail_generator_test.cc
test/coro/cloudstorage/test/: fake_cloud_factory_context.cc  fake_cloud_factory_context.h  fake_http_client.cc  fake_http_client.h  matcher.h  test_utils.cc  test_utils.h
test/data/: audio.m4a  audio.webm  empty_home_page.html  muxed-nonseekable.webm  muxed-seekable.webm  video.webm
