add_library(coro-cloudstorage)

target_sources(coro-cloudstorage PRIVATE
    coro/cloudstorage/util/fetch_json.h
    coro/cloudstorage/util/account_manager_handler.h
    coro/cloudstorage/util/auth_token_manager.h
    coro/cloudstorage/util/auth_manager.h
    coro/cloudstorage/util/auth_handler.h
    coro/cloudstorage/util/proxy_handler.h
    coro/cloudstorage/util/serialize_utils.h
    coro/cloudstorage/util/webdav_utils.h
    coro/cloudstorage/util/auth_data.h
    coro/cloudstorage/util/generator_utils.h
    coro/cloudstorage/util/avio_context.h
    coro/cloudstorage/util/thumbnail_generator.h
    coro/cloudstorage/util/thumbnail_options.h
    coro/cloudstorage/util/muxer.h
    coro/cloudstorage/util/file_utils.h
    coro/cloudstorage/util/string_utils.h
    coro/cloudstorage/util/merged_cloud_provider.h
    coro/cloudstorage/util/timing_out_cloud_provider.h
    coro/cloudstorage/util/timing_out_stop_token.h
    coro/cloudstorage/util/timing_out_stop_token.cc
    coro/cloudstorage/util/abstract_cloud_provider.h
    coro/cloudstorage/cloud_exception.h
    coro/cloudstorage/cloud_factory.h
    coro/cloudstorage/cloud_provider.h
    coro/cloudstorage/providers/google_drive.h
    coro/cloudstorage/providers/one_drive.h
    coro/cloudstorage/providers/dropbox.h
    coro/cloudstorage/providers/mega.h
    coro/cloudstorage/providers/mega/file_system_access.h
    coro/cloudstorage/providers/mega/http_io.h
    coro/cloudstorage/providers/box.h
    coro/cloudstorage/providers/yandex_disk.h
    coro/cloudstorage/providers/pcloud.h
    coro/cloudstorage/providers/webdav.h
    coro/cloudstorage/providers/amazon_s3.h
    coro/cloudstorage/providers/open_stack.h
    coro/cloudstorage/providers/hubic.h
    coro/cloudstorage/util/webdav_utils.cc
    coro/cloudstorage/util/auth_token_manager.cc
    coro/cloudstorage/util/generator_utils.cc
    coro/cloudstorage/util/serialize_utils.cc
    coro/cloudstorage/util/thumbnail_generator.cc
    coro/cloudstorage/util/muxer.cc
    coro/cloudstorage/util/ffmpeg_utils.cc
    coro/cloudstorage/util/file_utils.cc
    coro/cloudstorage/util/crypto_utils.h
    coro/cloudstorage/util/crypto_utils.cc
    coro/cloudstorage/util/recursive_visit.h
    coro/cloudstorage/providers/mega.cc
    coro/cloudstorage/providers/webdav.cc
    coro/cloudstorage/providers/amazon_s3.cc)
target_include_directories(coro-cloudstorage PUBLIC . ${CMAKE_CURRENT_BINARY_DIR})
if(WIN32)
    target_precompile_headers(coro-cloudstorage
        PUBLIC
            <winsock2.h>
            <windows.h>
    )
endif()
target_link_libraries(coro-cloudstorage PUBLIC
    coro-http
    nlohmann_json::nlohmann_json
    Mega
    pugixml::pugixml
    avcodec
    avutil
    avformat
    swscale
    avfilter
    cryptopp
    fmt
)

include(embed_resource)

embed_resource(
    TARGET coro-cloudstorage
    NAMESPACE coro::cloudstorage::util
    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/coro/cloudstorage/util/assets
    INPUT
        ../assets/icons/folder.svg
        ../assets/icons/gtk-file.svg
        ../assets/icons/audio-x-generic.svg
        ../assets/icons/image.svg
        ../assets/icons/video.svg
        ../assets/icons/user-trash.svg
        ../assets/html/mega_login.html
        ../assets/html/webdav_login.html
        ../assets/html/amazons3_login.html
        ../assets/html/dash_player.html
        ../assets/html/item_entry.html
        ../assets/html/provider_entry.html
        ../assets/html/account_entry.html
        ../assets/providers/box.png
        ../assets/providers/yandex.png
        ../assets/providers/dropbox.png
        ../assets/providers/onedrive.png
        ../assets/providers/pcloud.png
        ../assets/providers/webdav.png
        ../assets/providers/google.png
        ../assets/providers/mega.png
        ../assets/providers/amazons3.png
        ../assets/providers/hubic.png
        ../assets/styles/default.css
        ../assets/js/account_list_main.js
)
